// Vitest Snapshot v1

exports[`Component: ImageUpload > ui > edit as circle 1`] = `
<div>
  <div>
    <div
      class="img-upload mb-3"
      color="success"
    >
      <label
        class="form-label"
        for="image-uploader"
      >
        Profile photo
      </label>
      <input
        accept="image/*"
        id="image-uploader"
        type="file"
      />
      <div
        class="img-upload-wrapper bg-faded text-muted"
      >
        <i
          class="icon material-icons"
        >
          add_a_photo
        </i>
      </div>
      Some error
    </div>
  </div>
</div>
`;

exports[`Component: ImageUpload > ui > edit as rect 1`] = `
<div>
  <div>
    <div
      class="img-upload mb-3"
      color="success"
    >
      <label
        class="form-label"
        for="image-uploader"
      >
        Profile photo
      </label>
      <input
        accept="image/*"
        id="image-uploader"
        type="file"
      />
      <div
        class="img-upload-wrapper bg-faded text-muted"
      >
        <i
          class="icon material-icons"
        >
          add_a_photo
        </i>
      </div>
      Some error
    </div>
  </div>
</div>
`;

exports[`Component: ImageUpload > ui > file-selected as circle 1`] = `
<div>
  <div>
    <div
      class="img-upload mb-3"
      color="success"
    >
      <label
        class="form-label"
        for="image-uploader"
      >
        Profile photo
      </label>
      <input
        accept="image/*"
        id="image-uploader"
        type="file"
      />
      <div
        class="img-upload-wrapper bg-faded text-muted"
      >
        <i
          class="icon material-icons"
        >
          add_a_photo
        </i>
      </div>
      Some error
    </div>
  </div>
</div>
`;

exports[`Component: ImageUpload > ui > file-selected as rect 1`] = `
<div>
  <div>
    <div
      class="img-upload mb-3"
      color="success"
    >
      <input
        accept="image/*"
        aria-label="Profile photo"
        id="1"
        type="file"
      />
      <div
        class="img-upload-wrapper bg-faded text-muted"
      >
        <i
          class="icon material-icons"
        >
          add_a_photo
        </i>
      </div>
      Some error
    </div>
  </div>
</div>
`;

exports[`Component: ImageUpload > ui > no-file 1`] = `
<div>
  <div>
    <div
      class="img-upload mb-3"
      color="success"
    >
      <label
        class="form-label"
        for="image-uploader"
      >
        Profile photo
      </label>
      <input
        accept="image/*"
        id="image-uploader"
        type="file"
      />
      <div
        class="img-upload-wrapper bg-faded text-muted"
      >
        <i
          class="icon material-icons"
        >
          add_a_photo
        </i>
      </div>
      Some error
    </div>
  </div>
</div>
`;
